--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(beuzalors)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(beuzalors main.cpp Pokemon.hpp Pokemon.cpp)
+add_executable(beuzalors main.cpp Pokemon.hpp Pokemon.cpp Pokedex.hpp Pokedex.cpp Pokemon_vector.hpp Pokemon_vector.cpp)
 
 target_link_libraries(beuzalors
         sfml-graphics
