yes yes le commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(beuzalors)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(beuzalors main.cpp Pokemon.hpp Pokemon.cpp Pokedex.hpp Pokedex.cpp Pokemon_vector.hpp Pokemon_vector.cpp Pokemon_party.hpp Pokemon_party.cpp)
+add_executable(beuzalors main.cpp Pokemon.hpp Pokemon.cpp Pokedex.hpp Pokedex.cpp Pokemon_vector.hpp Pokemon_vector.cpp
+        Pokemon_PC.hpp Pokemon_PC.cpp Pokemon_team.hpp Pokemon_team.cpp)
 
 target_link_libraries(beuzalors
         sfml-graphics
